add markdown to notebook

--- a/data_viz.ipynb
+++ b/data_viz.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Visualization Notebook\n",
+    "\n",
+    "This notebook demonstrates how to load and visualize data from the IKEA Manuals at Work dataset using the `KeyframeDataset` class.\n",
+    "\n",
+    "## Setup\n",
+    "\n",
+    "First, we import the necessary libraries and set the paths to the annotation file, video directory, object directory, manual image directory, and PDF directory.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -22,6 +35,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exploring a Sample\n",
+    "We can load a specific sample from the dataset by providing the video index and frame index. The `__getitem__` method returns a dictionary containing various information about the frame, such as the category, name, video URL, frame time, parts, manual step details, and more."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -30,7 +51,15 @@
     "video_idx = 0  # Index of the video\n",
     "frame_idx = 12  # Index of the frame within the video\n",
     "\n",
-    "sample = dataset.__getitem__(video_idx, frame_idx)"
+    "sample = dataset.__getitem__(video_idx, frame_idx)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Visualizing Object Meshes\n",
+    "To visualize the object meshes in the frame, we can use the `trimesh` library. We extract the meshes from the sample and create a `trimesh.Scene` object. Then, we add each mesh to the scene and display it."
    ]
   },
   {
@@ -54,7 +83,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Get Object Poses in this frame in .glb format"
+    "# Exporting Object Poses as .glb\n",
+    "To export the object poses in the frame as a .glb file, we extract the meshes from the sample, create a `trimesh.Scene` object, assign colors to each mesh, make the meshes double-sided, concatenate the meshes into a single mesh, add the concatenated mesh to the scene, and export the scene as a .glb file."
    ]
   },
   {
