--- a/notebooks/data_viz.ipynb
+++ b/notebooks/data_viz.ipynb
@@ -34,11 +34,11 @@
     "sys.path.append(\"path/to/IKEA-Manuals-at-Work/src\") # e.g. ./src\n",
     "from IKEAVideo.dataloader.dataset_keyframe import KeyframeDataset\n",
     "\n",
-    "annotation_file = \"./data/data.json\"\n",
-    "video_dir = \"./data/videos/\"\n",
-    "obj_dir = './data/parts'\n",
-    "manual_img_dir = './data/manual_img'\n",
-    "pdf_dir = './data/pdfs'\n",
+    "annotation_file = \"../data/data.json\"\n",
+    "video_dir = \"../data/videos/\"\n",
+    "obj_dir = '../data/parts'\n",
+    "manual_img_dir = '../data/manual_img'\n",
+    "pdf_dir = '../data/pdfs'\n",
     "\n",
     "dataset = KeyframeDataset(annotation_file, video_dir, transform=None, load_into_mem=False,\n",
     "                            verbose=False, debug=True, obj_dir=obj_dir, manual_img_dir=manual_img_dir, pdf_dir=pdf_dir)"
