align glb color with mesh

--- a/notebooks/data_viz.ipynb
+++ b/notebooks/data_viz.ipynb
@@ -2739,7 +2739,10 @@
    ],
    "source": [
     "\n",
-    "mesh_all = sample[0]['meshes']\n",
+    "mesh_all = sample[0]['meshes'].copy()\n",
+    "frame_parts = sample[0]['frame_parts']\n",
+    "\n",
+    "\n",
     "scene = trimesh.Scene()\n",
     "colors = [\n",
     "    '#5A9BD5', '#FF6F61', '#77B77A', '#A67EB1', '#FF89B6', '#FFB07B',\n",
@@ -2749,8 +2752,9 @@
     "]\n",
     "meshes = None\n",
     "print(len(mesh_all))\n",
-    "color_index = 0\n",
     "for m, mesh in enumerate(mesh_all):\n",
+    "    color_index = min([int(p) for p in frame_parts[i].split(',')])\n",
+    "    mesh = mesh.copy()\n",
     "    \n",
     "    # Make the mesh double-sided by duplicating faces with reversed normals\n",
     "    reversed_faces = mesh.faces[:, ::-1]\n",
@@ -2764,16 +2768,16 @@
     "    mesh.visual.face_colors = np.tile(color_rgba, (mesh.faces.shape[0], 1))\n",
     "    color_index += 1\n",
     "    if meshes is None:\n",
-    "        meshes = mesh\n",
+    "        meshes = mesh.copy()\n",
     "    else:\n",
-    "        meshes = trimesh.util.concatenate(meshes, mesh)\n",
+    "        meshes = trimesh.util.concatenate(meshes, mesh.copy())\n",
     "\n",
     "# Rotate the mesh\n",
     "\n",
     "scene.add_geometry(meshes)\n",
     "# Export to glb\n",
-    "scene.export('scene.glb')\n",
-    "scene.show()"
+    "scene.export(f'scene.glb')\n",
+    "# scene.show()"
    ]
   }
  ],
@@ -2793,7 +2797,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.8.-1"
   }
  },
  "nbformat": 4,
