align glb color with mesh

--- a/notebooks/data_viz.ipynb
+++ b/notebooks/data_viz.ipynb
@@ -2753,7 +2753,7 @@
     "meshes = None\n",
     "print(len(mesh_all))\n",
     "for m, mesh in enumerate(mesh_all):\n",
-    "    color_index = min([int(p) for p in frame_parts[i].split(',')])\n",
+    "    color_index = min([int(p) for p in frame_parts[m].split(',')])\n",
     "    mesh = mesh.copy()\n",
     "    \n",
     "    # Make the mesh double-sided by duplicating faces with reversed normals\n",
