--- a/notebooks/data_viz.ipynb
+++ b/notebooks/data_viz.ipynb
@@ -2766,7 +2766,6 @@
     "    color_rgba = trimesh.visual.color.hex_to_rgba(colors[color_index % len(colors)])\n",
     "\n",
     "    mesh.visual.face_colors = np.tile(color_rgba, (mesh.faces.shape[0], 1))\n",
-    "    color_index += 1\n",
     "    if meshes is None:\n",
     "        meshes = mesh.copy()\n",
     "    else:\n",
@@ -2797,7 +2796,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.-1"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
